--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import BottomBar from '@/sections/BottomBar.astro';
+
 interface Props {
 	title: string;
 }
@@ -20,6 +22,7 @@ const { title } = Astro.props;
 
 		<div class="flex justify-center">
 			<slot />
+			<BottomBar />
 		</div>
 	</body>
 </html>
