--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Entries from '@/sections/Entries.astro';
 ---
 
 <Layout title="Eira - Bitácora Médica">
-	<main class="flex flex-col content-center w-full max-w-7xl">
+	<main class="flex flex-col content-center w-full max-w-5xl mt-2">
 		<Search />
 		<Entries />
 	</main>
