--- a/src/icons/note.astro
+++ b/src/icons/note.astro
@@ -1,6 +1,5 @@
 <svg
-  width={Astro.props.size}
-  height={Astro.props.size}
+  class={Astro.props.class}
   viewBox="0 0 24 24"
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
