--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import BottomBar from '@/sections/BottomBar.astro';
+import BottomBar from "@/sections/BottomBar.astro";
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -10,27 +10,26 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="flex justify-center min-h-svh">
+    <div class="relative w-screen max-w-5xl flex flex-col items-center">
+      <slot />
+      <BottomBar />
+    </div>
+  </body>
 
-		<div class="flex justify-center">
-			<slot />
-			<BottomBar />
-		</div>
-	</body>
+  <style is:global>
+    html {
+      font-family: system-ui, sans-serif;
+      background: #2c2c2c;
+      box-sizing: border-box;
+    }
+  </style>
 </html>
-<style is:global>
-	html {
-		font-family: system-ui, sans-serif;
-		background: #2c2c2c;
-		background-size: 224px;
-		box-sizing: border-box;
-	}
-</style>
