--- a/src/pages/entries/new.astro
+++ b/src/pages/entries/new.astro
@@ -16,8 +16,8 @@ if (Astro.request.method === "POST") {
 ---
 
 <Layout title="Nueva entrada">
-  <main class="flex justify-center">
-    <form method="POST" class="flex flex-col bg-background rounded-lg p-4 m-4">
+  <main class="w-full max-w-5xl mt-2">
+    <form method="POST" class="flex flex-col w-full bg-background rounded-lg p-6 ">
       <h1 class="text-primary">Nueva Entrada</h1>
       <FormInput label="Título" name="title" />
       <FormInput label="Detalles" name="text" />
