--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -1,8 +1,17 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Layout from "@/layouts/Layout.astro";
 ---
-<Layout title='Perfil'>
-  <main>
-    <h1>Profile</h1>
+
+<Layout title="Perfil">
+  <main class="text-white">
+    <h1 class="text-2xl">Profile</h1>
+    <div><h1></h1></div>
+    <p>
+      here you should show all the options that the bar/wheel
+      <span class="text-title bg-yellow-700 rounded-full p-1.5">
+        <span class="text-title">Idea:</span>
+        Lista seleccionable y ordenable
+      </span>
+    </p>
   </main>
 </Layout>
