--- a/src/sections/BottomBar.astro
+++ b/src/sections/BottomBar.astro
@@ -2,8 +2,8 @@
 import PlusIcon from "@/icons/pluscircle.astro";
 ---
 
-<footer class="absolute bottom-0 flex w-screen">
-  <nav class="bg-title w-full flex justify-center">
+<footer class="w-full absolute bottom-0">
+  <nav class="bg-title w-full flex justify-center rounded-t-3xl">
     <ul class="flex gap-8 md:justify-center md:max-w-2xl h-12 items-center">
       <a href="/">Home</a>
       <a href="/entries/new" class="bg-background rounded-full p-1 mb-9 hover:bg-green"
