testing commits in PRs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Search from '@/sections/Search.astro';
 import Entries from '@/sections/Entries.astro';
 ---
 
-<Layout title="Eira - Bitácora Médica">
+<Layout title="Eira - Bitácora Médica [REMOVE THIS]">
 	<main class="w-full max-w-5xl">
 		<Search />
 		<Entries />
