--- a/src/pages/entries/new.astro
+++ b/src/pages/entries/new.astro
@@ -15,7 +15,7 @@ if (Astro.request.method === "POST") {
 }
 ---
 
-<Layout title="Nueva entrada">
+<Layout title="Nueva entrada [REMOVE THIS]">
   <main class="w-full max-w-5xl mt-2">
     <form method="POST" class="flex flex-col w-full bg-background rounded-lg p-6 ">
       <h1 class="text-primary">Nueva Entrada</h1>
