--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -13,5 +13,6 @@ import Layout from "@/layouts/Layout.astro";
         Lista seleccionable y ordenable
       </span>
     </p>
+    <h1>Cambio de prueba</h1>
   </main>
 </Layout>
