--- a/src/pages/note/new.astro
+++ b/src/pages/note/new.astro
@@ -24,7 +24,7 @@ if (Astro.request.method === "POST") {
       <FormInput label="Fecha" name="date" type="date" />
       <FormInput label="Autor" name="author" />
       <FormInput label="Descripción" name="description" />
-      <FormInput label="Imagen" name="image" />
+      <FormInput label="Imagen" name="image" type="file"/>
       <FormInput label="Tags" name="tags" />
       <button type="submit" class="bg-primary text-background rounded-lg p-2 m-2"> Enviar </button>
     </form>
