--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,26 @@
 ---
-import Layout from '@/layouts/Layout.astro';
-import Search from '@/sections/Search.astro';
-import Entries from '@/sections/Entries.astro';
+import Layout from "@/layouts/Layout.astro";
+import Search from "@/sections/Search.astro";
+import Entries from "@/sections/Notes.astro";
+import Appointments from "@/sections/Appointments.astro";
 ---
 
 <Layout title="Eira - Bitácora Médica">
-	<main class="w-full max-w-5xl">
-		<Search />
-		<Entries />
-	</main>
+  <main class="w-full max-w-5xl">
+    <Search />
+    <Entries />
+    <Appointments />
+  </main>
 </Layout>
+
+<style>
+  .test {
+    background: #042438;
+    primary: #5790AB;
+    secondary: #064469;
+    accent: #9CCDDB;
+    disabled: #D0D7E1;
+    title: #A2E8DD;
+    formlabel: #7bf1a8;
+  }
+</style>
