--- a/src/sections/Search.astro
+++ b/src/sections/Search.astro
@@ -1,15 +1,15 @@
 ---
-import Cog from '@/icons/cog.astro'
-import Counter from '@/components/Counter.astro'
+import Cog from "@/icons/cog.astro";
+import SearchIcon from "@/icons/search.astro";
+import Counter from "@/components/Counter.astro";
 
-import {ENTRIES} from '@/data/entries'
-const totalEntries = ENTRIES.length
-const thisMonth = ENTRIES.filter(entry => {
-  const created = new Date(entry.createdAt)
-  const today = new Date()
-  console.log(`DEBUG:created.getMonth():`, created.getMonth())
-  return created.getMonth() === today.getMonth()
-}).length
+import { ENTRIES } from "@/data/entries";
+const totalEntries = ENTRIES.length;
+const thisMonth = ENTRIES.filter((entry) => {
+  const created = new Date(entry.createdAt);
+  const today = new Date();
+  return created.getMonth() === today.getMonth();
+});
 ---
 <section class="py-2 rounded-b-xl w-full flex flex-col">
   <div class="flex items-end justify-around mb-4">
@@ -18,14 +18,17 @@ const thisMonth = ENTRIES.filter(entry => {
       <h2 class="text-2xl font-bold text-accent">Eira</h2>
       <p class="text-accent">Bitácora Médica</p>
     </div>
-    <Counter text="Este mes" number={thisMonth} />
+    <Counter text="Este mes" number={thisMonth.length} />
   </div>
   <div class="flex items-center px-4 p-6 relative justify-center">
     <input
-      class="w-full h-8 rounded-md focus:outline-none pl-2 "
+      class="peer w-full h-10 focus:outline-none pl-10 border-opacity-50 border-y
+      bg-background border-primary text-primary placeholder:text-secondary
+       focus:border-primary focus:placeholder-secondary focus:border-opacity-70"
       type="text"
       placeholder="Buscar ..."
+      autofocus
     />
-    <Cog class="text-secondary absolute end-6" size="20px" />
+    <SearchIcon class="size-5 absolute start-6 text-opacity-50 peer-focus:text-opacity-70 text-primary peer-focus:text-primary" />
   </div>
-</sectionbg-backgr>
+</section>
