--- a/src/components/Entry.astro
+++ b/src/components/Entry.astro
@@ -1,7 +1,7 @@
 ---
 import NoteIcon from "@/icons/note.astro";
 import AppointmentIcon from "@/icons/schedule.astro";
-import { entryTypes } from "@/data/entries";
+import { entryTypes } from "@/data/types";
 
 const { id, type, slug, date, createdAt } = Astro.props;
 ---
