--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Perfil">
+<Layout title="Perfil" actionBar>
   <main class="text-white">
     <h1 class="text-2xl">Profile</h1>
     <div><h1></h1></div>
