--- a/src/components/BottomBar.astro
+++ b/src/components/BottomBar.astro
@@ -1,5 +1,6 @@
 ---
-import PlusIcon from '@/icons/pluscircle.astro'
+import:
+  - PlusIcon from '@/icons/pluscircle.astro'
 ---
 
 <footer class="w-full absolute bottom-0">
