--- a/src/components/Entry.astro
+++ b/src/components/Entry.astro
@@ -1,6 +1,8 @@
 ---
-import NoteIcon from '@/icons/note.astro'
-import AppointmentIcon from '@/icons/schedule.astro'
+import: 
+ - NoteIcon from '@/icons/note.astro'
+ - AppointmentIcon from '@/icons/schedule.astro'
+
 import { entryTypes } from '@/data/types'
 import { toLocal } from '@/utils/date'
 
